--- a/00-Introduction/source.tex
+++ b/00-Introduction/source.tex
@@ -3,7 +3,6 @@
 Les systèmes biologiques qui nous entourent présentent une incroyable diversité de structures leur permettant d'évoluer et de s'adapter à leur environnement.
 Des systèmes en apparence simples présentent ainsi des capacités d'optimisation de tâches. Le blob est par exemple un être unicellulaire capable de s'étendre sur plusieurs mètres. Uniquement grâce aux communications chimiques opérant au sein de son plasmodium, il est capable de trouver le chemin le plus court dans un labyrinthe entre deux points sur lesquels sont placés de la nourriture \cite{Nakagaki2000IntelligenceMB} ou de retrouver une configuration optimale d'un réseau de transport. Il sont même capables d'apprentissage~: deux entités qui fusionnent se transmettent des connaissances de leur environnement, montrant qu'elles ont chacune emmagasiné, à un point, de l'information sur ce dernier.
 Les colonies de fourmis, quant à elles constituées de milliers, voire de millions d'individus, sont capables de s'auto-organiser pour effectuer des tâches complexes de coopération pour construire leur nid, se défendre face aux prédateurs et trouver leur nourriture via une communication par leurs phéromones, son et toucher.
-
 Autrement dit, ces systèmes biologiques présentent des capacités de calcul remarquables. 
 Toutes ces stratégies mises en place par des systèmes biologiques ont inspiré de nombreux algorithmes d'optimisation imitant par exemple les colonies de fourmis, les essaims d'abeilles, les groupes de chats, les bancs de poissons ou encore les baleines, tous ces groupes d'animaux présentant des méthodes de communication décentralisées efficaces pour accomplir une tâche donnée~\cite{Darwish2018BioinspiredCA}.
 
@@ -14,13 +13,12 @@ Le perceptron, modèle à l'origine des réseaux de Deep Learning les plus perfo
 La diversité des applications actuelles de l'apprentissage automatique et le développement de nombreux modèles très performants ont amené la recherche en apprentissage automatique à se concentrer principalement sur une approche algorithmique et computationnelle de ces réseaux, en particulier pour les architectures de Deep Learning. 
 Cet éloignement de la biologie permet de s'extraire des contraintes physiques liées au neurone pour envisager des règles de calcul adaptées à une tâche spécifique.
 Néanmoins, la biologie, par sa diversité de comportements encore incompris, reste une source d'inspiration abondante pour apporter des paradigmes alternatifs ou complémentaires aux modèles d'apprentissage existants dans l'état de l'art. De plus, le comportement du cerveau est loin d'être entièrement compris et modélisé, ce qui signifie que les possibilités d'inspiration biologique sont constamment en train d'évoluer.
-Les réseaux de neurones impulsionnels (\emph{Spiking Neural Networks}) sont un exemple de modèle d'apprentissage illustrant une complémentarité récente entre l'approche bio-inspirée et l'approche computationnelle.
-Ces réseaux de neurones ont été développés dès les années 1990~\cite{Maass1996NetworksOS} et s'appuient directement sur le modèle biologique du neurone.
-Ils apparaissent dans de nombreux travaux récents comme une méthode montante dans le domaine de l'apprentissage automatique pour la conception de modèles d'apprentissage moins énergivores et distribués, grâce à la conception d'architectures matérielles neuromorphiques telles que LOIHI \footnote{\url{https://www.intel.com/content/www/us/en/research/neuromorphic-computing.html}}. De nombreux travaux cherchent ainsi à adapter des réseaux de neurones classiques de l'état de l'art dans une version impulsionnelle, faisant ainsi passer les SNN de la biologie au calcul~\cite{Schuman2022OpportunitiesFN}.
-De tels modèles apportent de nouveaux paradigmes de calcul pouvant se combiner avec des approches plus appliquées.
-Nous pensons ainsi qu'il est pertinent de continuer à explorer des modèles d'apprentissage automatique inspirés de la biologie.
-
-La thèse que nous présentons présente un modèle d'apprentissage élaboré à la fois dans une démarche d'inspiration biologique et utilisant des techniques plutôt calculatoires.
+% Les réseaux de neurones impulsionnels (\emph{Spiking Neural Networks}) sont un exemple de modèle d'apprentissage illustrant une complémentarité récente entre l'approche bio-inspirée et l'approche computationnelle.
+% Ces réseaux de neurones ont été développés dès les années 1990~\cite{Maass1996NetworksOS} et s'appuient directement sur le modèle biologique du neurone.
+% Ils apparaissent dans de nombreux travaux récents comme une méthode montante dans le domaine de l'apprentissage automatique pour la conception de modèles d'apprentissage moins énergivores et distribués, grâce à la conception d'architectures matérielles neuromorphiques telles que LOIHI \footnote{\url{https://www.intel.com/content/www/us/en/research/neuromorphic-computing.html}}. De nombreux travaux cherchent ainsi à adapter des réseaux de neurones classiques de l'état de l'art dans une version impulsionnelle, faisant ainsi passer les SNN de la biologie au calcul~\cite{Schuman2022OpportunitiesFN}.
+% De tels modèles apportent de nouveaux paradigmes de calcul pouvant se combiner avec des approches plus appliquées.
+% Nous pensons ainsi qu'il est pertinent de continuer à explorer des modèles d'apprentissage automatique inspirés de la biologie.
+La thèse que nous présentons développe un modèle d'apprentissage élaboré à la fois dans une démarche d'inspiration biologique et utilisant des techniques plutôt calculatoires.
 Concernant l'inspiration biologique, de nombreuses modélisations générales du cortex cérébral, telle que~\cite{binzegger05, Meunier2009HierarchicalMI,sporns_structure_2013,betzel_multi-scale_2017} proposent que le cortex est une architecture composée de modules auto-organisés.
 Ces modules communiquent autour des informations sensorielles collectées par l'organisme. Cette communication est réalisée de façon interne, liant des informations sensorielles et abstraites provenant de différentes parties du cortex et à différentes échelles spatiotemporelles. Enfin, bien qu'une hiérarchie de traitement de l'information apparaisse entre ces modules, certains traitant des entrées sensorielles et d'autres des entrées plus abstraites, de nombreux circuits de rétroactions entre les modules semblent présents à différents niveaux de l'architecture.
 La recherche d'architectures cognitives s'inspirant de l'architecture du cortex cérébral est un enjeu de longue date dans la recherche en apprentissage automatique. Il s'agit de développer des réseaux de neurones autonomes, capables de mémoire et de prise de décision de façon non supervisée, qui s'inspirent des architectures modulaires présentes dans le cerveau humain et qui cherchent à imiter certains comportements~\cite{Kotseruba201840YO}.
@@ -32,7 +30,7 @@ Dans une architecture modulaire, ces sous-structures communiquent de façon loca
 Pour construire cette architecture modulaire, nous nous appuierons sur un modèle d'apprentissage existant inspiré de la biologie~: les cartes auto-organisatrices (SOM) \cite{Kohonen1982}.
 Une carte auto-organisatrice est un ensemble de poids, appartenant à un espace d'entrée, disposés sur une grille. Grâce aux règles d'apprentissage, les poids se disposent de façon à représenter l'espace des entrées qui ont été présentées.
 Les cartes de Kohonen sont initialement inspirées des cartes topographiques présentes dans les cortex sensoriels ou moteurs. Les mécanismes de choix du BMU et de mise à jour, d'abord calculés grâce à des champs neuronaux, ont ensuite évolué vers des règles plus computationnelles de calcul de distance entre les entrées et les poids des cartes.
-De nombreux travaux ont cherché à associer les SOMs en architecture, que nous passerons en revue dans l'état de l'art de cette thèse, mais peu ont exploré l'aspect topologique et la simplicité des règles de calcul d'une carte pour les assembler en architectures modulaires comportant des rétroactions. C'est pourquoi nous nous intéressons à cet aspect dans cette thèse.
+De nombreux travaux ont cherché à associer les SOMs en architecture mais peu ont exploré l'aspect topographiquement ordonné et la simplicité des règles de calcul d'une carte pour les assembler en architectures modulaires comportant des rétroactions. C'est pourquoi nous nous intéressons à cet aspect dans cette thèse.
 
 Outre l'inspiration biologique que nous avons présentée, la construction de systèmes d'apprentissage modulaires a également une motivation computationnelle.
 Elle découle d'une part de l'observation que la combinaison de principes et d'algorithmes simples en architecture modulaire peut mener au développement de mécanismes de calcul complexes au sein du système. De ce fait cette approche est pertinente pour la conception de systèmes innovants, robustes, etc \cite{chen_modularity_2016}.
@@ -41,16 +39,23 @@ Dans le cas de systèmes modulaires, le comportement général qui émerge est u
 Cette auto-organisation est effectuée de façon décentralisée, via des règles et interactions locales au sein de l'architecture modulaire~: elle n'est pas supervisée par un processus extérieur à l'architecture.
 D'autre part, les systèmes modulaires présentent des propriétés de robustesse
 \cite{Tang2021ARO}
-Cette démarche d'utilisation de systèmes modulaires décentralisés a été mise en \oe{}uvre dans les algorithmes d'intelligence d'essaim \cite{Bonabeau1999SwarmI}. Ces algorithmes nous motivent également à considérer des architectures modulaires pour l'apprentissage.
+% Cette démarche d'utilisation de systèmes modulaires décentralisés a été mise en \oe{}uvre dans les algorithmes d'intelligence d'essaim \cite{Bonabeau1999SwarmI}. Ces algorithmes nous motivent également à considérer des architectures modulaires pour l'apprentissage.
 Dans cette thèse, nous nous plaçons ainsi dans une démarche de construction d'un système d'apprentissage~: l'assemblage de modules ayant des règles simples d'évolution peut mener à des comportements collectifs plus complexes, dans notre cas en vue d'un apprentissage. Nous savons que chaque module, une carte de Kohonen, est capable d'apprendre une représentation de son espace d'entrée. Nous nous attendons à diversifier les comportements d'apprentissage.
 \cite{chen_modularity_2016}
 
-Finalement, la conception d'une architecture modulaire d'apprentissage s'inspire d'une part des propriétés de modularité et d'émergence observées dans différents systèmes naturels en particulier dans le cerveau, et artificiels comme l'intelligence d'essaim ou les réseaux de neurones profonds.
-La propriété de modularité permettrait à une architecture de réaliser des calculs complexes en exploitant la collaboration et l'interaction des modules de façon décentralisée.
-Dans cette démarche, les SOMs sont de bonnes candidates pour être associés en architectures modulaires. Elles sont en effet inspirées de l'organisation des aires corticales, aires qui sont associées dans le cerveau en architecture modulaires. L'introduction de rétroactions dans ces architectures permettra de plus d'explorer de nouveaux comportements computationnels.
+% Finalement, la conception d'une architecture modulaire d'apprentissage s'inspire d'une part des propriétés de modularité et d'émergence observées dans différents systèmes naturels en particulier dans le cerveau, et artificiels comme l'intelligence d'essaim ou les réseaux de neurones profonds.
+% La propriété de modularité permettrait à une architecture de réaliser des calculs complexes en exploitant la collaboration et l'interaction des modules de façon décentralisée.
+% Dans cette démarche, les SOMs sont de bonnes candidates pour être associés en architectures modulaires. Elles sont en effet inspirées de l'organisation des aires corticales, aires qui sont associées dans le cerveau en architecture modulaires. L'introduction de rétroactions dans ces architectures permettra de plus d'explorer de nouveaux comportements computationnels.
+
+La notion d'architecture modulaire de cartes est d'ailleurs résumée par Kohonen dès 1995~:
+\begin{quote}
+Un objectif à long terme de l'auto-organisation est de créer des systèmes autonomes dont les éléments se contrôlent mutuellement et apprennent les uns des autres. De tels éléments de contrôle peuvent être implémentés par des SOMs spécifiques~; le problème principal est alors l'interface, en particulier la mise à l'échelle automatique des signaux d'interconnexion entre les modules et la collecte de signaux pertinents comme interface entre les modules. Nous laisserons cette idée aux recherches futures.
+Traduit de \cite{Kohonen1995SelfOrganizingM}
+\end{quote}
+
+L'objectif de nos travaux est ainsi de proposer un modèle de carte qui puisse être utilisée en tant que module, de définir l'interface entre les modules afin de créer une architecture, puis de comprendre les comportements de calcul qui émergent de l'association des modules.
 
 \section*{Problématique de la thèse}
-
 
 - Construction d'une architecture modulaire de cartes auto-organisatrices. 
 Cette thèse propose de construire une architecture modulaire de cartes auto-organisatrices. Cette démarche s'appuie sur différents modèles d'architecture développés au sein de l'équipe de recherche.
